# rosdoc2

./: .gitignore  README.md  h -f  requirements.txt  setup.cfg
.github/workflows/: test.yml
doc/: Doxyfile.md  conf.py.md  customization.md  faq.md  index.rst.md  installation.md  known_issues.md  rosdoc2.yaml.md  run_rosdoc2.md  theory_of_operation.md
rosdoc2/verbs/scan/: impl.py
test/: test_builder.py  test_flake8.py  test_scan.py  test_various_repos.py  utils.py
test/data/cpp_package/: package.xml
test/data/full_package/: package.xml
test/data/full_package/full_package/: __init__.py  dummy.py
test/data/meta/full_package/: conf.py  index.rst
test/data/meta/full_package/include/full_package/: iamcpp.hpp
test/data/meta/meta_package/: conf.py  index.rst  package.xml
test/data/meta/only_messages/: conf.py  index.rst
test/data/meta_package/: package.xml
test/data/minimum_cpp/: conf.py  index.rst  package.xml
test/data/minimum_cpp/include/minimum_cpp/: iamcpp.hpp
test/data/minimum_package/: conf.py  index.rst  package.xml
test/data/only_messages/: package.xml
test/data/user_conf_files/: Doxyfile  package.xml
test/data/user_conf_files/doc/: conf.py  index.rst
test/data/user_conf_files/nonstandard/include/user_conf_files/: iamcpp.hpp
test/data/user_conf_templates/: Doxyfile.j2  package.xml
test/data/user_conf_templates/doc/: conf.j2.py  conf.py  index.j2.rst  index.rst  instructions.rst
test_pkgs/cpp_package/include/cpp_package/: iamcpp.hpp
test_pkgs/minimal_publisher_py/: package.xml  setup.py
(+1 files in other folders)
